fixed overlap of sections

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,7 +20,6 @@ section.stats {
 }
 
 section.faq {
-    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
